feat: пример поля ввода

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-input label="Default input" [(ngModel)]="my_name"></ion-input>
   <ion-button (click)="press_me()"> Нажми меня</ion-button>
-
+  
 </ion-content>
